--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-main></app-main>
+<!-- Adds bootstrap support -->
+<link href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+<h1>
+  {{ title }}
+</h1>
+
+<main class = "container">
+  <router-outlet></router-outlet>
+</main>
