--- a/Mifalot-app/src/app/button/button.component.css
+++ b/Mifalot-app/src/app/button/button.component.css
@@ -3,10 +3,11 @@ button
   position: relative;
   vertical-align: center;
   margin: 3%;
-  height: 100px;
+  height: 120px;
   width: 200x;
   padding: 25px 48px;
   font-size: 20px;
+  font-weight: bold;  
   color: white;
   text-align: center;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
@@ -14,6 +15,7 @@ button
   border-radius: 15px;
   cursor: pointer;
   outline: none;
+
 }
 
 button:active
