--- a/Mifalot-app/src/app/pages/home/home.component.html
+++ b/Mifalot-app/src/app/pages/home/home.component.html
@@ -4,10 +4,12 @@
 </div>
 
 -->
+
+
 <div class = "home">
 
     <div class = "row">
-        <app-button  class = "col-md-2 col-xs-3 col-centered" (click) = "navigate(buttons[0].id)" [item] = "buttons[0]"> </app-button>
+        <app-button  class = "col-md-2 col-xs-3 col-centered " (click) = "navigate(buttons[0].id)" [item] = "buttons[0]"> </app-button>
         <app-button  class = "col-md-2 col-xs-3 col-centered" (click) = "navigate(buttons[1].id)" [item] = "buttons[1]"> </app-button>
     </div>
 
@@ -16,7 +18,7 @@
         <app-button  class = "col-md-2 col-xs-3 col-centered" (click) = "navigate(buttons[3].id)" [item] = "buttons[3]"> </app-button>
     </div>
 
-    <div class = "row">
+    <div class = "row">                     <!-- TODO: navigate to disconnect function for signout -->
         <app-button  class = "col-md-2 col-xs-3 col-centered" (click) = "navigate(buttons[4].id)" [item] = "buttons[4]"> </app-button>
     </div>
 
