--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -1,3 +1,29 @@
+<!--
+    <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+-->
+
 <p>
   attendance works!
+
+ <br> {{date}}<br/>
 </p>
+
+<div class="container">
+  <h2>בחר את הקבוצה אותה את\ה מאמן\נת:</h2>
+                                            
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">לחץ כדי לבחור
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">a</a></li>
+      <li><a href="#">b</a></li>
+      <li><a href="#">c</a></li>
+    </ul>
+  </div>
+</div>
+
