--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -1,3 +1,7 @@
-<p>
-  reports works!
-</p>
+<p></p>
+    <section class = "jumbotron text-center">
+      <div class = "container">
+        <h1 class = "jumbotron-heading"> דוחו"ת חניכים </h1>
+        <p class = "lead text-muted"> ניתן לקבל את דוחות החניכים </p>
+      </div>
+    </section>
