--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -1,11 +1,15 @@
 <!-- Adds bootstrap support -->
 <link href = "https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel = "stylesheet" integrity = "sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
- <link href = "http://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel = "stylesheet">
-
-<h1>
-  {{ title }}
-</h1>
+<link href = "https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css" rel = "stylesheet">
 
 <main class = "container">
+  
+<!-- Print database
+    <div style = "color:white;" *ngFor = "let item of items | async">
+       {{ item | json }}
+    </div>
+-->
+
   <router-outlet></router-outlet>
 </main>
+
