--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -7,11 +7,14 @@
 </head>
 -->
 
-<p>
-  attendance works!
+<p></p>
 
- <br> {{date}}<br/>
-</p>
+    <section class = "jumbotron text-center">
+      <div class = "container">
+        <h1 class = "jumbotron-heading"> הודעות </h1>
+        <p class = "lead text-muted"> {{date}} </p>
+      </div>
+    </section>
 
 <div class="container">
   <h2>בחר את הקבוצה אותה את\ה מאמן\נת:</h2>
