--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -1,3 +1,31 @@
-<p>
-  messages works!
-</p>
+<p></p>
+
+    <section class = "jumbotron text-center">
+      <div class = "container">
+        <h1 class = "jumbotron-heading"> הודעות </h1>
+        <p class = "lead text-muted"> מוצגות כאן כל ההודעות של המשתמש </p>
+      </div>
+    </section>
+
+    <div class="album text-muted">
+      <div class="container">
+
+        <div class="row">
+          <div class="card">
+            <img data-src = "holder.js/100px280/thumb" alt = "Card image cap">
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+    <footer class = "text-muted">
+      <div class = "container">
+        <p class = "float-right">
+          <a href = "Messages" class = "btn btn-primary"> חזור למעלה </a>
+        </p>
+      </div>
+    </footer>
+
