--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -5,7 +5,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
--->
+
 
 <p></p>
 
@@ -29,4 +29,126 @@
     </ul>
   </div>
 </div>
+-->
+<p></p>
 
+<section class="jumbotron text-center">
+  <div class="container">
+    <h1 class="jumbotron-heading"> דו"ח נוכחות </h1>
+    <p class="lead text-muted"> מילוי דו"ח נוכחות יומי של החניכים </p>
+  </div>
+</section>
+
+<!--form of checklist and notes-->
+<div class="container">
+  <div class="col-md-5">
+    <div class="form-area">
+      <form role="form">
+        <br style="clear:both">
+        <h3 style="margin-bottom: 25px; text-align: center;">מילוי טופס</h3>
+
+        <!--checklist-->
+
+        <div class="container">
+
+          <div class="[ col-xs-12 col-sm-6 ]">
+
+
+            <div class="[ form-group ]">
+              <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
+              <div class="[ btn-group ]">
+                <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
+                    <span class="[ glyphicon glyphicon-ok ]"></span>
+                    <span> </span>
+                </label>
+                <label for="fancy-checkbox-primary" class="[ btn btn-default active ]">
+                    כפיר כהן
+                </label>
+              </div>
+            </div>
+
+                        <div class="[ form-group ]">
+              <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
+              <div class="[ btn-group ]">
+                <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
+                    <span class="[ glyphicon glyphicon-ok ]"></span>
+                    <span> </span>
+                </label>
+                <label for="fancy-checkbox-primary" class="[ btn btn-default active ]">
+                    דודי חקקיאן
+                </label>
+              </div>
+            </div>
+
+                        <div class="[ form-group ]">
+              <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
+              <div class="[ btn-group ]">
+                <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
+                    <span class="[ glyphicon glyphicon-ok ]"></span>
+                    <span> </span>
+                </label>
+                <label for="fancy-checkbox-primary" class="[ btn btn-default active ]">
+                    מתן אנקונה
+                </label>
+              </div>
+            </div>
+
+                                    <div class="[ form-group ]">
+              <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
+              <div class="[ btn-group ]">
+                <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
+                    <span class="[ glyphicon glyphicon-ok ]"></span>
+                    <span> </span>
+                </label>
+                <label for="fancy-checkbox-primary" class="[ btn btn-default active ]">
+                    בן חורי
+                </label>
+              </div>
+            </div>
+
+
+          </div>
+
+        </div>
+
+
+
+
+
+        <!--Notes-->
+        <div class="form-group">
+          <textarea class="form-control" type="textarea" id="message" placeholder="הערות לגבי נוכחות החניכים" maxlength="140" rows="7"></textarea>
+          <!--Submit-->
+          <span class="help-block"><p id="characterLeft" class="help-block ">"לאחר מילוי הנוכחות וההערות, לחץ על "שלח טופס</p></span>
+        </div>
+
+        <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">שלח טופס</button>
+      </form>
+    </div>
+  </div>
+</div>
+
+<div class="album text-muted">
+  <div class="container">
+
+    <div class="row">
+      <div class="card">
+        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
+          bit longer.</p>
+      </div>
+
+    </div>
+
+  </div>
+</div>
+
+<!--Footer contains go back and return to the head of the page buttons-->
+<footer class="text-muted">
+  <div class="container">
+    <p class="float-right">
+      <a href="Attendance" class="btn btn-primary"> חזור למעלה </a>
+      <a href="Home" class="btn btn-primary"> חזור אחורה </a>
+    </p>
+  </div>
+</footer>
