--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -15,10 +15,22 @@
         <p class = "lead text-muted"> {{date}} </p>
       </div>
     </section>
+-->
 
+<p></p>
+
+<section class="jumbotron text-center">
+  <div class="container">
+    <h1 class="jumbotron-heading"> דו"ח נוכחות </h1>
+    <p class="lead text-muted"> מילוי דו"ח נוכחות יומי של החניכים </p>
+    <p>{{date}}</p>
+  </div>
+</section>
+
+<!--picking team-->
 <div class="container">
   <h2>בחר את הקבוצה אותה את\ה מאמן\נת:</h2>
-                                            
+
   <div class="dropdown">
     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">לחץ כדי לבחור
     <span class="caret"></span></button>
@@ -29,19 +41,10 @@
     </ul>
   </div>
 </div>
--->
-<p></p>
-
-<section class="jumbotron text-center">
-  <div class="container">
-    <h1 class="jumbotron-heading"> דו"ח נוכחות </h1>
-    <p class="lead text-muted"> מילוי דו"ח נוכחות יומי של החניכים </p>
-  </div>
-</section>
 
 <!--form of checklist and notes-->
 <div class="container">
-  <div class="col-md-5">
+  <div class="col-md-12">
     <div class="form-area">
       <form role="form">
         <br style="clear:both">
@@ -66,8 +69,8 @@
                 </label>
               </div>
             </div>
-
-                        <div class="[ form-group ]">
+<!--
+            <div class="[ form-group ]">
               <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
               <div class="[ btn-group ]">
                 <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
@@ -80,7 +83,7 @@
               </div>
             </div>
 
-                        <div class="[ form-group ]">
+            <div class="[ form-group ]">
               <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
               <div class="[ btn-group ]">
                 <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
@@ -93,7 +96,7 @@
               </div>
             </div>
 
-                                    <div class="[ form-group ]">
+            <div class="[ form-group ]">
               <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
               <div class="[ btn-group ]">
                 <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
@@ -105,14 +108,11 @@
                 </label>
               </div>
             </div>
-
+-->
 
           </div>
 
         </div>
-
-
-
 
 
         <!--Notes-->
@@ -130,15 +130,6 @@
 
 <div class="album text-muted">
   <div class="container">
-
-    <div class="row">
-      <div class="card">
-        <img data-src="holder.js/100px280/thumb" alt="Card image cap">
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little
-          bit longer.</p>
-      </div>
-
-    </div>
 
   </div>
 </div>
