--- a/Mifalot-app/src/app/pages/attendance/attendance.component.css
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.css
@@ -1,3 +1,4 @@
+
 .red{
     color:red;
     }
@@ -27,6 +28,11 @@
 .form-group input[type="checkbox"]:checked + .btn-group > label span:first-child {
     display: inline-block;
 }
+
 .form-group input[type="checkbox"]:checked + .btn-group > label span:last-child {
     display: none;   
+}
+
+footer{
+    margin-bottom: 5%;
 }
