--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -1,5 +1,5 @@
-
-<p></p>
+<p>
+</p>
 
 <section class="jumbotron text-center">
   <div class="container">
@@ -10,24 +10,24 @@
 </section>
 
 <!--picking team-->
- <h1>
-<div class="container ">
- 
-  <div class="dropdown col-sm-1" >
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">לחץ כדי לבחור
+<h1>
+  <div class="container ">
+
+    <div class="dropdown col-sm-1">
+      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">לחץ כדי לבחור
     <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-      <li><a href="#">a</a></li>
-      <li><a href="#">b</a></li>
-      <li><a href="#">c</a></li>
-    </ul>
+      <ul class="dropdown-menu">
+        <li><a href="#">a</a></li>
+        <li><a href="#">b</a></li>
+        <li><a href="#">c</a></li>
+      </ul>
+    </div>
+    <div class="pick" class="text-right col-sm-10">:בחר את הקבוצה אותה את\ה מאמן\נת</div>
   </div>
-  <div class="pick" class="text-right col-sm-10">:בחר את הקבוצה אותה את\ה מאמן\נת</div>
-</div>
 </h1>
 <!--form of checklist and notes-->
 <div class="container">
-  <div class="col-md-8 col-md-offset-2" >
+  <div class="col-md-8 col-md-offset-2">
     <div class="form-area">
       <form role="form">
         <br style="clear:both">
@@ -35,71 +35,51 @@
 
         <!--checklist-->
 
-        <div class="container">
+        <div class="col-md-8 col-md-offset-2">
+        <div class="funkyradio">
+        
+        <div class="funkyradio-success" *ngFor="let pupils of pupils">
+           <input type="checkbox" name="checkbox" id="{{pupils.name}}" />
+              <label for="{{pupils.name}}">{{pupils.name}}</label>
+        </div>
 
-          <div class="[ col-xs-12 col-sm-6 ]">
+        
+        </div>
+        </div>
 
-            <div class="[ form-group ] col-xs-6">
-              <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
-              <div class="[ btn-group ]">
-                <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
-                    <span class="[ glyphicon glyphicon-ok ]"></span>
-                    <span> </span>
-                </label>
-                <label for="fancy-checkbox-primary" class="[ btn btn-default active ]">
-                    כפיר כהן
-                </label>
-              </div>
+<!--
+        <div class="col-md-8 col-md-offset-2">
+
+          <div class="funkyradio">
+            <div class="funkyradio-info">
+              <input type="checkbox" name="checkbox" id="checkbox1" />
+              <label for="checkbox1">כפיר כהן</label>
             </div>
-
-            <div class="[ form-group ] col-xs-6">
-              <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
-              <div class="[ btn-group ]">
-                <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
-                    <span class="[ glyphicon glyphicon-ok ]"></span>
-                    <span> </span>
-                </label>
-                <label for="fancy-checkbox-primary" class="[ btn btn-default active ]">
-                    דודי חקקיאן
-                </label>
-              </div>
+            <div class="funkyradio-primary">
+              <input type="checkbox" name="checkbox" id="checkbox2" />
+              <label for="checkbox2">דודי חקקיאן</label>
             </div>
-
-            <div class="[ form-group ] col-xs-6">
-              <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
-              <div class="[ btn-group ]">
-                <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
-                    <span class="[ glyphicon glyphicon-ok ]"></span>
-                    <span> </span>
-                </label>
-                <label for="fancy-checkbox-primary" class="[ btn btn-default active ]">
-                    מתן אנקונה
-                </label>
-              </div>
+            <div class="funkyradio-success">
+              <input type="checkbox" name="checkbox" id="checkbox3" />
+              <label for="checkbox3">מתן אנקונה</label>
             </div>
-
-            <div class="[ form-group ] col-xs-6">
-              <input type="checkbox" name="fancy-checkbox-primary" id="fancy-checkbox-primary" autocomplete="off" />
-              <div class="[ btn-group ]">
-                <label for="fancy-checkbox-primary" class="[ btn btn-primary ]">
-                    <span class="[ glyphicon glyphicon-ok ]"></span>
-                    <span> </span>
-                </label>
-                <label for="fancy-checkbox-primary" class="[ btn btn-default active ]">
-                    בן חורי
-                </label>
-              </div>
+            <div class="funkyradio-danger">
+              <input type="checkbox" name="checkbox" id="checkbox4" />
+              <label for="checkbox4">בן חורי</label>
             </div>
-
-
+            <div class="funkyradio-warning">
+              <input type="checkbox" name="checkbox" id="checkbox5" />
+              <label for="checkbox5">יעקובי</label>
+            </div>
           </div>
 
         </div>
-
+-->
 
         <!--Notes-->
         <div class="form-group">
-          <textarea class="form-control text-right" type="textarea" id="message" placeholder="הערות לגבי נוכחות החניכים" maxlength="140" rows="7"></textarea>
+          <textarea class="form-control text-right" type="textarea" id="message" placeholder="הערות לגבי נוכחות החניכים" maxlength="140"
+            rows="7"></textarea>
           <!--Submit-->
           <span class="help-block"><p id="characterLeft" class="help-block text-right">"לאחר מילוי הנוכחות וההערות, לחץ על "שלח טופס</p></span>
         </div>
@@ -121,7 +101,7 @@
   <div class="container">
     <p class="float-right">
       <a href="Attendance" class="btn btn-primary col-md-3 col-md-offset-2"> חזור למעלה </a>
-      <a href="Home" class="btn btn-primary col-md-3 col-md-offset-2" > חזור אחורה </a>
+      <a href="Home" class="btn btn-primary col-md-3 col-md-offset-2"> חזור אחורה </a>
     </p>
   </div>
 </footer>
