pages routing & message template

--- a/Mifalot-app/src/app/app.component.css
+++ b/Mifalot-app/src/app/app.component.css
@@ -1,4 +1,4 @@
-.container
+.app-content
 {
     background: #0264d6; /* Old browsers */
 	background: -moz-radial-gradient(center, ellipse cover,  #0264d6 1%, #1c2b5a 100%); /* FF3.6+ */
