--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -11,7 +11,7 @@
 
     <section class = "jumbotron text-center">
       <div class = "container">
-        <h1 class = "jumbotron-heading"> הודעות </h1>
+        <h1 class = "jumbotron-heading"> נוכחות </h1>
         <p class = "lead text-muted"> {{date}} </p>
       </div>
     </section>
