--- a/Mifalot-app/src/app/button/button.component.html
+++ b/Mifalot-app/src/app/button/button.component.html
@@ -1,6 +1,8 @@
-<button type = "button" class = "btn btn-primary" [ngStyle] = " {'background': item.background, 'border-bottom': '3px solid' + item.lineColor, 
+<a type = "button" class = "btn btn-primary" [ngStyle] = " {'background': item.background, 'border-bottom': '3px solid' + item.lineColor, 
                       '-webkit-box-shadow': 'inset 0 -3px' + item.lineColor, 'box-shadow': 'inset 0 -3px' + item.lineColor }" > 
   <i class = {{item.sign}} > </i> 
   <br/> 
   {{ item.txt }}
-</button>
+</a>
+
+
