--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -1,7 +1,7 @@
 <p></p>
     <section class = "jumbotron text-center">
       <div class = "container">
-        <h1 class = "jumbotron-heading"> דוחו"ת חניכים </h1>
+        <h1 class = "jumbotron-heading"> דוחו"ת חניכים <i class = "fa fa-bar-chart fa-1x"></i> </h1>
         <p class = "lead text-muted"> ניתן לקבל את דוחות החניכים </p>
       </div>
     </section>
