upade pages header

--- a/Mifalot-app/src/app/pages/attendance/attendance.component.html
+++ b/Mifalot-app/src/app/pages/attendance/attendance.component.html
@@ -1,13 +1,4 @@
-<p>
-</p>
-
-<section class="jumbotron text-center">
-  <div class="container">
-    <h1 class="jumbotron-heading"> דו"ח נוכחות </h1>
-    <p class="lead text-muted"> מילוי דו"ח נוכחות יומי של החניכים </p>
-    <p>{{date}}</p>
-  </div>
-</section>
+<app-page-header [item] = "header"> </app-page-header>
 
 <!--picking team-->
 
@@ -20,8 +11,23 @@
         <br style="clear:both">
 
         <!--Injection of html-->
-        <div [innerHtml]="htmlVariable" class="pull-right"></div>
+        <div class = "pull-right"> <h3 class = "instructions"> {{ instructions }} </h3></div>
         
+
+<div class="container">                                       
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">HTML</a></li>
+      <li><a href="#">CSS</a></li>
+      <li><a href="#">JavaScript</a></li>
+    </ul>
+  </div>
+</div>
+
+
+
          <!--Team selection-->
         <div *ngFor="let teams_names of teams_names">
           <button type="button" class="btn btn-danger" (click)="getPupils(elem.id)" id="{{teams_names.name}}" #elem>{{teams_names.name}}</button>
