--- a/Mifalot-app/src/app/pages/personal-info/personal-info.component.html
+++ b/Mifalot-app/src/app/pages/personal-info/personal-info.component.html
@@ -1,7 +1,1 @@
-<p></p>
-    <section class = "jumbotron text-center">
-      <div class = "container">
-        <h1 class = "jumbotron-heading"> מידע אישי </h1>
-        <p class = "lead text-muted"> הצגת המידע האישי של המשתמש </p>
-      </div>
-    </section>
+<app-page-header [item] = "header"> </app-page-header>
