--- a/Mifalot-app/src/app/pages/reports/reports.component.html
+++ b/Mifalot-app/src/app/pages/reports/reports.component.html
@@ -1,7 +1,1 @@
-<p></p>
-    <section class = "jumbotron text-center">
-      <div class = "container">
-        <h1 class = "jumbotron-heading"> דוחו"ת חניכים <i class = "fa fa-bar-chart fa-1x"></i> </h1>
-        <p class = "lead text-muted"> ניתן לקבל את דוחות החניכים </p>
-      </div>
-    </section>
+<app-page-header [item] = "header"> </app-page-header>
