--- a/Mifalot-app/src/app/pages/messages/messages.component.css
+++ b/Mifalot-app/src/app/pages/messages/messages.component.css
@@ -11,7 +11,7 @@ body
     line-height: 1;
     color: #414141;
     margin: 0 auto;
-    max-width: 50%;
+    max-width: 90%;
 
     border-style: solid;
     border-width: 2px;
@@ -235,4 +235,33 @@ p
 }
 .pink:after {
   border-bottom-color: #ffbee3;
+}
+
+.message
+{
+  text-align: center;
+  display: inline-block;
+  color: white;
+  font-size: 90%;
+}
+
+.page-header
+
+{
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  margin-top: 1%;
+}
+
+.subTitle
+{
+  color: white;
+  text-align: center;
+  font-size: 110%;
+}
+
+.fa-comments
+{
+  color: white;
 }
