--- a/Mifalot-app/src/app/pages/messages/messages.component.html
+++ b/Mifalot-app/src/app/pages/messages/messages.component.html
@@ -1,13 +1,6 @@
+<app-page-header [item] = "header"> </app-page-header>
+
 <div class = "container">
-
-  <p></p>
-
-      <section class = "jumbotron text-center">
-        <div class = "container">
-          <h1 class = "jumbotron-heading"> הודעות <i class = "fa fa-envelope-open fa-1x" > </i> </h1> 
-        </div>
-      </section>
-
 
   <body>
   <!-- <div class = "text-center"> askjdnsakjlndasndnasn </div> -->
