full background css

--- a/Mifalot-app/src/app/app.component.css
+++ b/Mifalot-app/src/app/app.component.css
@@ -8,7 +8,6 @@
 	background: -ms-radial-gradient(center, ellipse cover,  #0264d6 1%,#1c2b5a 100%); /* IE10+ */
 	background: radial-gradient(ellipse at center,  #0264d6 1%,#1c2b5a 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0264d6', endColorstr='#1c2b5a',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-	/*height:calc(100vh);*/
-	heighht: 100%;
+	height: calc(100vh);
 	width: 100%;
 }
