--- a/Mifalot-app/src/app/app.component.html
+++ b/Mifalot-app/src/app/app.component.html
@@ -1,4 +1,24 @@
 
+<!-- Nav bar -->
 <div class = "app-content">
+
+  <nav class = "navbar navbar-default">
+    <div class = "container-fluid">
+      <div class = "navbar-header">
+        <a class = "navbar-brand" [routerLink] = "['']"> דף הבית </a>
+      </div>
+      <div *ngIf = "isLoggedIn" class = "collapse navbar-collapse" id = "bs-example-navbar-collapse-1">
+        <ul class = "nav navbar-nav navbar-right">
+          <li> <a (click) = "backClicked()"> לדף הקודם <i class = "fa fa-backward"></i> </a></li>
+          <li> <a id = "btn-logout" (click) = "logout()"> יציאה <i class = "fa fa-sign-out"></i> </a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Routing pages -->
   <router-outlet> </router-outlet>
+
 </div>
+
+   
